# scribe

./: .gitignore  Makefile  README.md  pyproject.toml
ai_context/: DEV_GUIDE_FOR_PYTHON.md  SOFTWARE_DESIGN_PRINCIPLES.md
ai_context/git_collector/: MCP_GENERAL_DOCS.md  MCP_PYTHON_SDK_DOCS.md  PYDANTIC_AI_DOCS.md
examples/: basic_usage.py
src/scribe/: __init__.py  __main__.py  converter.py  server.py  transcript.py  utils.py
tests/: __init__.py  test_converter.py  test_server.py
tools/: build_ai_context_files.py
